k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: akidb
  labels:
    name: akidb
    environment: production
    app: akidb
